issue #203 add z-index for modal area close and fix bug if board without cards

--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -18,6 +18,12 @@ body{
               max-width: $row-width;
               margin: 0;
               min-height: 100%;
+              position: relative;
+              z-index: 101;
+              h6 {
+                  color: #666;
+                  font-weight: 300;
+              }
             }
         }
 
@@ -27,6 +33,12 @@ body{
               padding: 30px;
               max-width: $row-width;
               margin: 100px auto 50px auto;
+              position: relative;
+              z-index: 101;
+              h6 {
+                  color: #666;
+                  font-weight: 300;
+              }
             }
 
         }
