--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -196,13 +196,6 @@ fieldset {
     opacity: 0.5;
 }
 
-.body-modal {
-    h6 {
-        color: #666;
-        font-weight: 300;
-    }
-}
-
 #loading-bar .bar {
     background-color: $white !important;
     border: 1px solid #259CC3 !important;
